<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Starbucks Express Order</string>
    <string name="action_settings">Settings</string>
    <string name="user_guid">User as Guid</string>
    <string name="store_number">Store as integer</string>
    <string name="button_submit">Check price</string>
    <string name="user0">D86E59EC-385E-4093-AC83-D4C012ABD261</string>
    <string name="store0">3228</string>
    <string name="url0">http://</string>
    <string name="postcontent0">&lt;cart>\n
	&lt;items>\n
&lt;item>\n
    &lt;quantity>1&lt;/quantity>\n
	&lt;commerce>\n
	&lt;sku>41&lt;/sku>\n
	&lt;/commerce>\n
	&lt;/item>\n
	&lt;/items>\n
&lt;/cart></string>
    <string name="title_activity_order_submit">Place Order</string>
    <string name="invoking">Invoking URL at</string>
    <string name="hello_world">Hello world!</string>

</resources>
